demos/multi-team/team-b/app-repo/k8s/1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-b
  labels:
    single-cluster-gateway: "true"
