demos/multi-team/team-b/app-repo/k8s/2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: app-b
spec:
  selector:
    matchLabels:
      app: app-b
  replicas: 1 
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: europe-west4-docker.pkg.dev/gateway-demos/demos/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
