demos/multi-team/team-b/app-repo/k8s/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
  namespace: app-b
spec:
  selector:
    app: app-b
  ports:
    - name: http
      port: 80
      targetPort: 8080
